<resources>
    <string name="app_name">Agro Forestry</string>
    <string name="version_number">1.0.0 - Live</string>
    <string name="powered">Developed by CROPINTELLIX PRIVATE LIMITED</string>
    <string name="welcome_text">Welcome to Agro Forestry..!!</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_here">New here..??</string>
    <string name="dont_worry">Don\'t worry just signup to \n access this amazing app</string>
    <string name="sign_in">Sign In</string>
    <string name="returning">Returning..??</string>
    <string name="just_login">Just login to resume your\n amazing work</string>
    <string name="Data_year">Data year</string>
    <string name="Select_Year">Select Year</string>
    <string name="Select_Season">Select Season</string>
    <string name="year">Year</string>
    <string name="fram_details">Farm Details</string>
    <string name="hindi" translatable="false">हिन्दी</string>
    <string name="अ" translatable="false">अ</string>
    <string name="english" translatable="false">English</string>
    <string name="a" translatable="false">A</string>
    <string name="telugu" translatable="false">తెలుగు</string>
    <string name="అ" translatable="false">అ</string>
    <string name="marathi" translatable="false">मराठी</string>
    <string name="म" translatable="false">म</string>
    <string name="gujarat" translatable="false">ગુજરાત</string>
    <string name="ગુ" translatable="false">ગુ</string>
    <string name="odia" translatable="false">ଓଡିଆ</string>
    <string name="ଓ" translatable="false">ଓ</string>
    <string name="assam" translatable="false">অসমীয়া</string>
    <string name="অ" translatable="false">অ</string>
    <string name="bengali" translatable="false">বাংলা</string>
    <string name="আ" translatable="false">আ</string>
    <string name="FarmerOnboarding">Farmer Onboarding</string>
    <string name="PolygonMapping">Polygon Mapping</string>
    <string name="Revist">Revisit</string>
    <string name="UpdateInfo">Update Info</string>
    <string name="account_details">Account Details</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="otp">OTP</string>
    <string name="company_code">Organization Code</string>
    <string name="already_account">Already have an account..?? SignIn</string>
    <string name="search_here">Search Here</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot Password..??</string>
    <string name="dont_account">Don\'t have a account..??  Signup</string>
    <string name="state_screen">State Detail</string>
    <string name="fetch_detail">Fetch Detail</string>
    <string name="Caste">Caste</string>
    <string name="Age">Age</string>
    <string name="ST">ST</string>
    <string name="SC">SC</string>
    <string name="BC">BC</string>
    <string name="OBC">OBC</string>
    <string name="General">General</string>
    <string name="farmer_name">Farmer Full Name</string>
    <string name="NomineeName">Nominee Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="guardian_name">Father/Husband/Guardian Name</string>
    <string name="WhatsAppNo">Whats App No"</string>
    <string name="aadhar">Aadhar Number / Voter Card</string>
    <string name="mobile">Mobile Number</string>
    <string name="search">Search Mobile Number / Aadhar Number / Farmer Survey ID / Farmer Unique ID</string>
    <string name="mobile_access">Mobile Access</string>
    <string name="Patta">Patta/ROFR/H-No/Registration No</string>
    <string name="SurveyNo">Survey No</string>
    <string name="TotalArea">Total Area(Hector)</string>
    <string name="PlantedArea">Planted Area(Hector)</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="taluka">Block/Mandal</string>
    <string name="panchayat">Panchayat</string>
    <string name="village">Village</string>
    <string name="address">Address</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="pincode">Pincode</string>
    <string name="plot_id">Farmer Unique ID</string>
    <string name="total_plot">Number of Plots</string>
    <string name="plot_number">Plot Number</string>
    <string name="area_land">Area of Land</string>
    <string name="submitted_successfully">Data Submitted Successfully.</string>
    <string name="area_hector">Area in Hector</string>
    <string name="plot_number_hint">Enter Plot Number</string>
    <string name="bigha_number_hint">Enter Area in Bigha</string>
    <string name="area_hector_hint">Enter Acres</string>
    <string name="plot_info">Plot Details</string>
    <string name="ownership">Land Ownership</string>
    <string name="area_choosen">Area Choosen for AWD</string>
    <string name="area_choosen_acres">Area Choosen for AWD (Acres)</string>
    <string name="plot_area_Ha">Plot area in Acres</string>
    <string name="affidavit">Sign the Affidavit</string>
    <string name="survey_number">Survey Number</string>
    <string name="owner_name">Owner Name</string>
    <string name="patta_number">Patta Number</string>
    <string name="daag_number">Daag Number</string>
    <string name="khatha_number">Katha Number</string>
    <string name="pattadhar_number">Pattadhar Passbook Number</string>
    <string name="khatian_number">Khatian no./Plot no.</string>
    <string name="record_photo">Photo of the land Records</string>
    <string name="click_here">Click here to take photo</string>
    <string name="carbon_sign">Sign the consent form for carbon Credit</string>
    <string name="farmer_photo">Farmer Photo</string>
    <string name="aadhar_photo">Aadhar Photo</string>
    <string name="other_photo">Other Photo</string>
    <string name="survey_number_hint">Enter Survey Number</string>
    <string name="patta_number_hint">Enter Patta Number</string>
    <string name="daag_number_hint">Enter Daag Number</string>
    <string name="khatha_number_hint">Enter Katha Number</string>
    <string name="pattadhar_number_hint">Enter Pattadhar Passbook Number</string>
    <string name="khatian_number_hint">Enter Khatian no./Plot no.</string>
    <string name="PlantationName">Plantation Name</string>
    <string name="TypeofPlantation">Type of Plantation</string>
    <string name="MixedPlantation">Mixed Plantation/Crop</string>
    <string name="HGirthofPlant">Height &amp; Girth of Plant</string>
    <string name="HightofPlant">Height of Plant(cm)</string>
    <string name="GirthofPlant">Girth of Plant</string>
    <string name="PlantSpacing">Plant Spacing</string>
    <string name="TotalPlants">Total Plants</string>
    <string name="DatePlantation">Date of Plantation</string>
    <string name="YearPlantation">Year of Plantation</string>
    <string name="NoOfPlants">No Of Plants</string>
    <string name="planttoplantspacing">Plant to Plant Spacing(mtr)</string>
    <string name="rowtorowspacing">Row to Row Spacing(mtr)</string>
    <string name="standingtrees">Current Standing Trees</string>
    <string name="DateyearPlantation">Date &amp; Year of Plantation</string>
    <string name="AccountName">Account Holder Name</string>
    <string name="AccountNumber">Account Number</string>
    <string name="NameOfTheBank">Name Of The Bank</string>
    <string name="IFSCCode">IFSC Code</string>
    <string name="Branch">Branch</string>
    <string name="signin">Sign the consent form for carbon credit</string>
    <string name="SoilType">Soil Type</string>
    <string name="PlowwingLand">Plowing of Land/Field</string>
    <string name="Nagali">Nagali</string>
    <string name="Machinary">Machinery</string>
    <string name="None">None</string>
    <string name="Fertilisation">Fertilisation Management</string>
    <string name="Organic">Organic / Natural</string>
    <string name="Both">Both</string>
    <string name="Irrigation">Irrigation Type</string>
    <string name="Rainy">Rainy</string>
    <string name="WaterManagement">Water Management</string>
    <string name="Electricity">Electricity</string>
    <string name="Diesel">Diesel</string>
    <string name="Solar">Solar</string>
    <string name="younoticeany">Did you notice any other elements/Remarks</string>
    <string name="signature_screen">Signature</string>
    <string name="surveyor_info">Surveyor Info</string>
    <string name="survey_date">Date of Survey</string>
    <string name="survey_time">Time of Survey</string>
    <string name="surveyor_name">Name of Surveyor</string>
    <string name="remark">Village Remarks</string>
    <string name="get_location">Click To Fetch Location</string>
    <string name="remark_hint">Enter Village Remarks</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="crop_screen">Crop Details</string>
    <string name="plot_unique_id">Plot Unique ID</string>
    <string name="sub_plots">Sub plots</string>
    <string name="plot_area">Plot Area</string>
    <string name="date_irrigation">Date of Nursery</string>
    <string name="select_date">Select Date</string>
    <string name="transplanting_date">Date of Transplanting</string>
    <string name="preparation_date">Date of Land Preparation</string>
    <string name="crop_season">Crop Season</string>
    <string name="crop_variety">Crop Variety</string>
    <string name="last_year">Last Year</string>
    <string name="current_year">Current Year</string>
    <string name="fertilizer_management">Fertilizer Management </string>
    <string name="nitrogen">Nitrogen (Urea)</string>
    <string name="phosphorous">Phosphorous (DAP)</string>
    <string name="potassium">Potassium (MOP)</string>
    <string name="water_management">Water Management</string>
    <string name="yield">Yield</string>
    <string name="farmer_benefits">Farmer Benefits</string>
    <string name="total_plots">Total land area</string>
    <string name="season">Season</string>
    <string name="benefit">Benefit</string>
    <string name="capture_event">Capture Benefit Evidence</string>
    <string name="image_preview">Image Preview</string>
    <string name="capture_data">Capture Data</string>
    <string name="block">Block</string>
    <string name="khasara_no">Khasara no</string>
    <string name="aeration_event_number">Aeration Event Number</string>
    <string name="geofencing_check">Geofencing Check</string>
    <string name="aeration_event">Capture Aeration Event</string>
    <string name="pipe_number">Pipe Number</string>
    <string name="map_screen">Map Screen</string>
    <string name="image_screen">Image Screen</string>
    <string name="polygon_mapping">Polygon Mapping</string>
    <string name="plot_area_acres">Plot Area (Acres)</string>
    <string name="farmer_onboarding_report">Farmer Registration Report</string>
    <string name="crop_data_report">Crop Data Report</string>
    <string name="farmer_benefit_report">Farmer Benefit Report</string>
    <string name="pipe_report">Pipe Installation Report</string>
    <string name="polygon_report">Polygon Report</string>
    <string name="report_detail_reason">Reason of rejection</string>
    <string name="reason">Reason</string>
    <string name="image_rejected">Image Rejected</string>
    <string name="rejection_reason">Reason:  </string>
    <string name="image_mismatch">Image Mismatch</string>
    <string name="image1">Image 1*</string>
    <string name="image2">Image 2</string>
    <string name="tnc">Terms &amp; Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
</resources>