<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cropintellix.DashBoardCrop">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/thirdcropintellix"></ImageView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/deshboardone"
                android:id="@+id/farmeronboarding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/FarmerOnboarding"
                    android:textColor="@color/ic_launcher_background_new"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="18sp"
                    android:gravity="center"
                    ></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/deshboardtwo"
                android:id="@+id/polygonmapping">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/PolygonMapping"
                    android:textColor="@color/ic_launcher_background_new"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="18sp"
                    android:gravity="center"
                    ></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/deshboardthree"
                android:id="@+id/revistplotdetail">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Revist"
                    android:textColor="@color/ic_launcher_background_new"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="18sp"
                    android:gravity="center"
                    ></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/deshboardfour"
                android:id="@+id/updateinfo">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/UpdateInfo"
                    android:textColor="@color/ic_launcher_background_new"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="18sp"
                    android:gravity="center"
                    ></TextView>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/assam_farmer_back"
                style="@style/yourButtonStyle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/heading_bg"
                android:text="@string/back"
                android:textColor="#ffffff"></Button>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"></View>


           <!-- <Button
                android:id="@+id/assam_farmer_Next"
                style="@style/yourButtonStyle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/heading_bg"
                android:text="@string/next"
                android:textColor="#ffffff"></Button>-->

        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>