<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cropintellix.YearRegistractionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:background="@drawable/heading_bg"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/text_timer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1">
            </View>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/heading_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/setdatayear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/Data_year"
                    android:fontFamily="@font/poppins_bold">
                </TextView>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1">
            </View>

        </LinearLayout>

        <TextView
            android:id="@+id/showCurrentMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#8A8686"
            android:textSize="20sp"
            android:text="Data yea"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold">
        </TextView>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginTop="30dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp">

           <com.google.android.material.textfield.TextInputLayout
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:hint="@string/Select_Year"
              android:textColorHint="@color/black1"
               app:boxStrokeColor="#9BD5AA"
               app:boxStrokeWidth="1dp"
               app:boxStrokeWidthFocused="1dp">

               <AutoCompleteTextView
                   android:id="@+id/SelectYear"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:fontFamily="@font/poppins_regular"
                   android:inputType="none"
                   android:focusable="false"
                   android:longClickable="false"
                   android:maxLength="50"
                   android:maxLines="1"
                   android:padding="5dp"
                   android:textColor="@color/black"
                   android:textSize="15sp" />

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:hint="@string/Select_Season"
              android:textColorHint="@color/black1"
               app:boxStrokeColor="#9BD5AA"
               app:boxStrokeWidth="1dp"
               app:boxStrokeWidthFocused="1dp"
               android:layout_marginTop="10dp">

               <AutoCompleteTextView
                   android:id="@+id/SelectSession"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:fontFamily="@font/poppins_regular"
                   android:inputType="none"
                   android:focusable="false"
                   android:longClickable="false"
                   android:maxLength="50"
                   android:maxLines="1"
                   android:padding="5dp"
                   android:textColor="@color/black"
                   android:textSize="15sp" />

           </com.google.android.material.textfield.TextInputLayout>

       </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/assam_farmer_back"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/heading_bg"
            style="@style/yourButtonStyle"
            android:text="@string/back"
            android:textColor="#ffffff">
        </Button>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">
        </View>


        <Button
            android:id="@+id/assam_farmer_Next"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/heading_bg"
            style="@style/yourButtonStyle"
            android:text="@string/next"
            android:textColor="#ffffff">
        </Button>

    </LinearLayout>

</RelativeLayout>